--- a/mercado-libre-buscador/package.json
+++ b/mercado-libre-buscador/package.json
@@ -24,6 +24,8 @@
     "core-js": "^2.5.4",
     "express": "^4.17.0",
     "http-errors": "^1.7.2",
+    "jquery": "^3.4.1",
+    "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
     "serve-favicon": "^2.5.0",
