--- a/mercado-libre-buscador/package.json
+++ b/mercado-libre-buscador/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "axios": "^0.16.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
